Change success page

--- a/success.html
+++ b/success.html
@@ -14,7 +14,7 @@
 
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-4">AWESOME!!</h1>
+      <h1 class="display-4">SUCCESS!!</h1>
       <p class="lead">You've been successfully signed up for the newsleter, look forward to some great content!</p>
     </div>
   </div>
